base/flux/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux
  namespace: flux
spec:
  endpointSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - kustomize-controller
      - source-controller
      - helm-controler
  ingress:
  # In-namespace
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": flux
    - matchExpressions:
      - key: app
        operator: In
        values:
        - kustomize-controller
        - source-controller
        - helm-controller
  egress:
  # In-namespace
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": flux
    - matchExpressions:
      - key: app
        operator: In
        values:
        - kustomize-controller
        - source-controller
        - helm-controller
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
